[metadata]
name = sporact_lib
license = Apache 2.0
summary = base action class for actions
description-file =
    README.rst
long_description_content_type = text/x-rst
author = shivesh
author-email = shivesh@anlyz.io
version = 0.1.0
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Utilities

[options]
packages = 
    sporact_lib

install_requires =
    mistral_lib>=1.2.0
    yaql>=1.1.3

[options.entry_points]
mistral.actions =
    test.my_action = sporact_lib.actions:MyAction

mistral.expression.functions =
    test.my_function = sporact_lib.expression_functions:my_function_

[wheel]
universal = 1

[tool:pytest]
filterwarnings =
    # Show any DeprecationWarnings once
    once::DeprecationWarning
